# next-weekday

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/next_weekday/: __main__.py  next_weekday.py
tests/next_weekday/: test_next_weekday.py
