[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "next-weekday"
version = "1.0.0"
authors = [
  { name="thoera", email="erard.thomas@gmail.com" },
]
description = "Find the number of days until the next given weekday from a specific date."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
development = [
    "black",
    "pre-commit",
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/thoera/next-weekday"
"Bug Tracker" = "https://github.com/thoera/next-weekday/issues"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]
cache_dir = ".cache"

[tool.ruff]
select = ["D", "E", "F"]
line-length = 88
cache-dir = ".cache"

[tool.ruff.per-file-ignores]
"__init__.py" = ["D104"]

[tool.ruff.pydocstyle]
convention = "google"
